src/objects/BMCServiceDesk__QuickLink__c.object
<CustomObject>
    <description>Quick Links portlet for SS</description>
    <fields>
        <fullName>BMCServiceDesk__FKStaff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Foreign key reference to User object</description>
        <label>FKStaff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QuickLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LinkName__c</fullName>
        <description>Quick link name</description>
        <label>LinkName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Permanent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Link is permanent or not</description>
        <label>Permanent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__URL_Order__c</fullName>
        <description>Order of URL</description>
        <label>URL Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__URL__c</fullName>
        <description>URL field for QuickLink</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>QuickLink</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuickLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__LinkName_Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__LinkName__c) , ISBLANK(BMCServiceDesk__LinkName__c))</errorConditionFormula>
        <errorMessage>Please enter Name.</errorMessage>
    </validationRules>
</CustomObject>